# ASWAP

./: README.md
aleo-front-next/: package-lock.json  package.json
aleo-frontend/: .env.sample  .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
aleo-frontend/src/: App.css  App.tsx  constants.tsx  fonts.css  index.tsx  main.rs  swap.tsx
aleo-frontend/src/Common/: body.tsx  header.tsx
aleo-frontend/src/CreateTransaction/: createTransaction.tsx
aleo-frontend/src/Liquidity/: tokenTable.tsx
aleo-frontend/src/MintToken/: MintTokens.tsx
aleo-frontend/src/Records/: RequestRecords.tsx
aleo-frontend/src/Swap/: BalanceBox.tsx  ConfirmButton.tsx  PoolLiquidity.tsx  StyledInput.tsx  SwapNav.tsx  SwapWhiteBox.tsx  fetchTokenBalance.ts
aleo-frontend/src/Swap/Liquidity/: PairBox.tsx  index.tsx
aleo-frontend/src/Swap/SwapContainer/: SwapAmountContainer.tsx  index.tsx
aleo-frontend/src/assets/contracts/: BNB.json  Circle.json  Deposit.json  Ethereum.json  QveNFT.json  Tether.json
aleo-frontend/src/assets/contracts/BCS/: BNB.json  Circle.json  Deposit.json  Ethereum.json  QVE.json  QveNFT.json  Tether.json
aleo-frontend/src/deployProgram/: deploy.tsx  deployProgram.tsx
aleo-frontend/src/wallet/: createTransaction.tsx  deployProgram.tsx  initDemoToken.tsx  requestRecord.tsx  requestRecordPlainText.tsx  requestTransactionHistory.tsx  signing.tsx  wallet.tsx
aleo-next-front/: package-lock.json  package.json
aleo-next-front/app/: page.tsx
aleo-next-front/app/Swap/: ConfirmButton.tsx  PoolLiquidity.tsx  StyledInput.tsx
(+2 files in other folders)
